force-app/main/default/objects/B25__Time_Header__c/B25__Time_Header__c.object-meta.xml
<CustomObject>
    <description>Definition of a header on the Multi record Calendar.</description>
    <label>Time Header</label>
    <nameField>
        <label>Time Header Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Headers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>