force-app/main/default/objects/B25__Time_Header__c/fields/B25__Grouping__c.field-meta.xml
<CustomField>
    <fullName>B25__Grouping__c</fullName>
    <description>The amount of time this Header should span.</description>
    <inlineHelpText>Le temps que doit durer cet en-tête.</inlineHelpText>
    <label>Grouping</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cell</fullName>
                <default>true</default>
                <label>Cell</label>
            </value>
            <value>
                <fullName>Hour</fullName>
            </value>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Week</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Quarter</fullName>
            </value>
            <value>
                <fullName>Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>