force-app/main/default/objects/B25__Time_Header__c/fields/B25__Order__c.field-meta.xml
<CustomField>
    <fullName>B25__Order__c</fullName>
    <description>Determines in what order the Time Headers appear with lower number appearing at the top followed by lower numbers and empty fields last.</description>
    <inlineHelpText>Détermine l’ordre dans lequel les en-têtes de temps apparaissent, les numéros les plus bas apparaissant en haut, suivis des numéros les plus bas et des champs vides en dernier.</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>