force-app/main/default/objects/B25__Time_Header__c/fields/B25__View__c.field-meta.xml
<CustomField>
    <fullName>B25__View__c</fullName>
    <description>The View this Header should be shown on.</description>
    <inlineHelpText>La vue sur laquelle cet en-tête doit être affiché.</inlineHelpText>
    <label>View</label>
    <referenceTo>B25__View__c</referenceTo>
    <relationshipLabel>Time Headers</relationshipLabel>
    <relationshipName>Time_Headers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>